# masm-project-template

./: Cargo.toml  README.md
masm/accounts/: counter.masm
masm/auth/: no_auth.masm
masm/notes/: increment_note.masm
masm/scripts/: increment_script.masm  nop_script.masm
scripts/: setup_node.sh
src/: common.rs  main.rs
tests/: increment_count_test.rs
